4929 - on mobile, product quantity is selectable again in cart; in checkout, cart items are no longer draggable

--- a/packages/scandipwa/src/route/Checkout/Checkout.style.scss
+++ b/packages/scandipwa/src/route/Checkout/Checkout.style.scss
@@ -184,4 +184,8 @@
             display: none;
         }
     }
+
+    .CheckoutOrderSummary-OrderItems {
+        pointer-events: none;
+    }
 }
